Fixed layout issues

--- a/current-sea-front/src/Header.css
+++ b/current-sea-front/src/Header.css
@@ -49,6 +49,7 @@
     height: 30px;
     color: white;
     background-color: #00ADA2;
+    border: #00ADA2;
     font-size: large;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
